--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.28.1",
     "ioredis": "^5.9.2",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.562.0",
@@ -52,6 +53,7 @@
     "siwe": "^3.0.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.44.4",
