Add Strategy Builder, EtherFi integration, and Graph-accelerated adapters
Strategy Builder (React Flow):
- Custom block types: Input, Stake, Lend, Borrow, Swap with protocol selection
- FlowEdge with click-to-edit allocation (% or ETH), auto-balancing siblings
- DFS loop detection with LoopBadge for iteration control
- Recursive graph traversal for accurate flow calculations
- Live APY integration from DeFi Llama yields

EtherFi Integration:
- Dashboard page with Platinum tier badge and loyalty points
- Staking panel with live weETH rates
- EtherFi Insights card for main dashboard
- Graph-based position queries via EtherFi subgraph

The Graph Adapters (~25x faster):
- Aave V3 Graph adapter (all 5 chains)
- Compound V3 Graph adapter with USDC market support
- Lido Graph adapter (mainnet + L2 RPC fallback)
- EtherFi Graph adapter (mainnet + L2 RPC fallback)
- Automatic fallback to RPC on Graph failure

Infrastructure:
- Enhanced yields service with per-asset APY rates
- CSS animations for loop indicators
- Updated documentation and architecture docs

--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,14 @@ NEXTAUTH_URL="http://localhost:3000"
 # RPC Providers - Get your keys from:
 # Alchemy: https://www.alchemy.com/
 # Infura: https://www.infura.io/
-NEXT_PUBLIC_ALCHEMY_RPC_MAINNET="https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY"
-NEXT_PUBLIC_ALCHEMY_RPC_ARBITRUM="https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY"
-NEXT_PUBLIC_ALCHEMY_RPC_OPTIMISM="https://opt-mainnet.g.alchemy.com/v2/YOUR_KEY"
-NEXT_PUBLIC_ALCHEMY_RPC_BASE="https://base-mainnet.g.alchemy.com/v2/YOUR_KEY"
-NEXT_PUBLIC_ALCHEMY_RPC_POLYGON="https://polygon-mainnet.g.alchemy.com/v2/YOUR_KEY"
+# Option 1: Single API key (recommended - auto-builds URLs for all chains)
+NEXT_PUBLIC_ALCHEMY_API_KEY="YOUR_ALCHEMY_API_KEY"
+# Option 2: Full URLs per chain (overrides API key if set)
+# NEXT_PUBLIC_ALCHEMY_RPC_MAINNET="https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY"
+# NEXT_PUBLIC_ALCHEMY_RPC_ARBITRUM="https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY"
+# NEXT_PUBLIC_ALCHEMY_RPC_OPTIMISM="https://opt-mainnet.g.alchemy.com/v2/YOUR_KEY"
+# NEXT_PUBLIC_ALCHEMY_RPC_BASE="https://base-mainnet.g.alchemy.com/v2/YOUR_KEY"
+# NEXT_PUBLIC_ALCHEMY_RPC_POLYGON="https://polygon-mainnet.g.alchemy.com/v2/YOUR_KEY"
 
 # WalletConnect - Get your project ID from https://cloud.walletconnect.com/
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID="your-walletconnect-project-id"
@@ -27,6 +30,12 @@ TENDERLY_PROJECT="your-tenderly-project"
 
 # Price Data - https://www.coingecko.com/en/api
 COINGECKO_API_KEY="your-coingecko-api-key"
+
+# The Graph - High-performance indexed queries (~25x faster than RPC)
+# Get your API key at https://thegraph.com/studio/
+# When enabled, uses subgraphs for Aave V3, Compound V3, Lido, EtherFi
+USE_GRAPH_ADAPTERS="true"
+GRAPH_API_KEY="your-graph-api-key"
 
 # Historical Portfolio Data - GoldRush (formerly Covalent)
 # Get your API key at https://goldrush.dev/
