--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@envio-dev/hypersync-client": "^0.7.2",
+    "@envio-dev/hypersync-client-win32-x64-msvc": "^0.7.2",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -35,12 +37,16 @@
     "@trpc/next": "^11.8.1",
     "@trpc/react-query": "^11.8.1",
     "@trpc/server": "^11.8.1",
+    "@xyflow/react": "^12.10.0",
+    "alchemy-sdk": "^3.6.5",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.28.1",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.4.0",
     "ioredis": "^5.9.2",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.562.0",
@@ -58,6 +64,7 @@
     "tailwind-merge": "^3.4.0",
     "viem": "^2.44.4",
     "wagmi": "^3.3.4",
+    "ws": "^8.19.0",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
@@ -67,6 +74,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "prettier": "^3.8.0",
