--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "npm install --legacy-peer-deps",
-  "buildCommand": "npm run build"
+  "framework": "nextjs",
+  "installCommand": "npm install --legacy-peer-deps --force",
+  "buildCommand": "npx prisma generate && npm run build"
 }
