--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "framer-motion": "^12.28.1",
     "graphql": "^16.12.0",
     "graphql-request": "^7.4.0",
@@ -55,6 +56,7 @@
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-is": "^19.2.4",
     "recharts": "^3.6.0",
     "siwe": "^3.0.0",
     "socket.io": "^4.8.3",
