--- a/Dockerfile.workers
+++ b/Dockerfile.workers
@@ -5,18 +5,19 @@ WORKDIR /app
 # Install OpenSSL for Prisma
 RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
 
-# Copy package files
+# Copy package.json only (NOT package-lock.json to avoid platform issues)
 COPY package.json ./
 
-# Install dependencies (ignore platform-specific optional deps)
-RUN npm install --legacy-peer-deps --ignore-scripts --omit=optional
+# Install dependencies fresh (no lockfile = no platform conflicts)
+RUN npm install --legacy-peer-deps 2>&1 || (cat /root/.npm/_logs/*.log && exit 1)
 
-# Generate Prisma client
+# Copy Prisma schema and generate client
 COPY prisma ./prisma
 RUN npx prisma generate
 
 # Copy source code
-COPY . .
+COPY src ./src
+COPY tsconfig.json ./
 
 # Start workers
 CMD ["npm", "run", "workers"]
