--- a/Dockerfile.workers
+++ b/Dockerfile.workers
@@ -1,23 +1,24 @@
-FROM node:22-slim
+# Use Alpine for smaller image
+FROM node:22-alpine
 
 WORKDIR /app
 
 # Install OpenSSL for Prisma
-RUN apt-get update && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache openssl
 
-# Copy package.json only
 COPY package.json ./
 
-# Install with yarn (handles optional/platform deps correctly)
-RUN yarn install --ignore-optional --network-timeout 100000
+# Install all deps but clean cache after
+RUN yarn install --ignore-optional --network-timeout 100000 && \
+    yarn cache clean
 
-# Copy Prisma schema and generate client
 COPY prisma ./prisma
 RUN npx prisma generate
 
-# Copy source code
-COPY src ./src
 COPY tsconfig.json ./
+COPY src ./src
 
-# Start workers
-CMD ["npm", "run", "workers"]
+# Clean up unnecessary files to reduce size
+RUN rm -rf /tmp/* /root/.npm /root/.cache
+
+CMD ["npx", "tsx", "src/server/jobs/start-workers.ts"]
